v38 2020-06-08

	* Fixed bug where ALLOW_CALL only worked with sequences
	  if called at least once

	* Fixed bug to support IMPLEMENT_MOCKx and IMPLEMENT_CONST_MOCKx
	  constexpr

	* More fixes to Conan packaging. Thank you Kai Bernhard.

	* Support OK-reporters from the runtime reporter registration
	  API. Thank you Moritz Haase.

	* Rewrites to not trigger deprecation warnings in C++17 builds.
	  Thank you Kasper Laudrup.

v37 2020-02-09

	* Added adapter for the Criterion unit testing framework. Thanks you

	  Etienne Barbier <etienne.barbier@atos.net>

	* Fixes to Conan packaging. Thank you kert

	* Fix issue 180 for GCC and MSVC, where the presence of a type
	  like Qt5/QChar broke compilation of unrelated mock signatures.

	* Fix TROMPELOEIL_CONCAT macro issue to restore compiling with MSVC
	  when traditional preprocessor is enabled.

	* Fix issue 173 for GCC 4.x by performing testing to confirm
	  correctness of existing code.

v36 2019-12-29

	* Status reporting of passed expectation calls as sucessful assertions in
	  DOCTEST and Catch2. Thanks to:

	    Tore Martin Hagen <tore@instanes.name> for Catch2
	    Cristian Morales Vega <cristian@samknows.com> for DOCTEST

	  You get the support via the provided headers

	    #include <catch2/trompeloeil.hpp>
	    #include <doctest/trompeloeil.hpp>

	  See the CookBook for information about adding such hooks for other unit
	  testing frame works.

	* Fixed issue 172 where THROW() would not compile if the function returns
	  a type that is not default constructible.

	* Partially fixed issue 173, where an object constructible from nullptr
	  but not comparable with nullptr, would be constructed when printed
	  (for example when an expectation failed.)

	  Unfortunately this fix does not work for gcc versions 4.x or MSVC 14.

v35 2019-04-01

	* Improvements to documentation. Thanks to:

	    Robert Dailey <rcdailey@gmail.com>
	    Yuri Timenkov <yuri@timenkov.ru>
	    Viatorus <lutztonineubert@gmail.com>
