@@ -1,3 +1,6 @@
+	* Fix issue 197: Add override to virtual destructors
+	  to avoid -Wsuggest-destructor-override warnings.
+
 v38 2020-06-08
 
 	* Fixed bug where ALLOW_CALL only worked with sequences
